Web interface: Builders table, layout fixes
These changes fix the layout of the web interface.  The Builders table is
now a fixed width (300 px), and the other tables are also fixed at 700 px.
No table will resize; browsers with less than 1050 pixels will display a
horizontal scroll bar.  This permanent fixes the resizing / overlay
problems that required a 1920px monitor to be able to view the data.

The builder table was overhauled.  The "main" status is now a table footer
spanning 3 columns instead of another data row.  The column sorting has
been removed from this table, it only displays in order of increasin ID.
The origin is split across two lines, with the category appearing on the
second line and it's not part of the portsmon hyperlink.
The status column cells also display over two lines where the first line
is the builder status and the second line is reserved for elapsed builder
time (future update).

Javascript, css, and index.html were all modified to make this happen.

--- a/src/share/poudriere/html/assets/poudriere.css
+++ b/src/share/poudriere/html/assets/poudriere.css
@@ -53,6 +53,14 @@ th, td { border: 1px solid black; }
         background-color: #FFCC33;
         color: #202020;
 }
+.builders {
+        background-color: #000040;
+        color: #CCCCCC;
+}
+.timehack {
+	color: #CC0033;
+	font-weight: 400;
+}
 .remaining { background-color: #E3E3E3; }
 .new { display: none; }
 #header {
@@ -77,8 +85,7 @@ th, td { border: 1px solid black; }
 #main {
 	margin-bottom: 22px; /* footer */
 	margin-top: 95px;
-	width: 100%;
-	height: 100%;
+	width: 1100px;
 }
 
 #footer {
@@ -98,13 +105,12 @@ th, td { border: 1px solid black; }
 }
 
 #left {
-	width: 21%;
+	width: 350px;
 	float: left;
 }
 #right {
 	float: left;
-	width: 75%;
-	margin-bottom: 25px;
+	width: 700px;
 	margin-left: 10px;
 }
 #header_left { float: left; }
@@ -191,6 +197,18 @@ th, td { border: 1px solid black; }
 
 #ignored_table td:nth-child(3) {
         width: 10%;
+}
+
+#builders_table {
+	width: 100%;
+}
+
+#builders_table td:nth-child(1) {
+        width: 10%;
+}
+
+#builders_table td:nth-child(3) {
+        width: 33%;
 }
 
 #ignored {
